--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@ body {
 
 #notebook {
   margin: 0 auto;
+  padding: 16pt 0;
   width: 60em;
   border-left: 1px solid #222;
   border-right: 1px solid #222;
@@ -14,9 +15,18 @@ body {
 }
 
 div.cell {
-  padding-left: 64pt;
-  padding-right: 64pt;
-  border-bottom: 1px dashed #eee;
+  padding: 8pt 64pt;
+  border-bottom: 1px dashed #ccc;
+}
+
+div.gutter {
+  float: left;
+  color: #777;
+  font-family: monospace;
+  font-size: 75%;
+  position: relative;
+  top: 24pt;
+  left: 24pt;
 }
 
 #code {
@@ -52,6 +62,7 @@ tr.selected {
 #data {
   overflow: scroll;
   height: 20em;
+  padding-top: 12pt;
 }
 
 #data table {
@@ -65,6 +76,20 @@ tr.selected {
 #data th, td {
   border: 1px solid #ccc;
   padding: 2pt 4pt;
+  text-align: left;
+}
+#data th {
+  font-size: 50%;
+}
+#data td {
   font-size: 75%;
 }
 
+h1 {
+  margin: 0;
+  margin-bottom: 6pt;
+}
+p {
+  margin: 0;
+  margin-bottom: 2pt;
+}
