--- a/public/notebook.css
+++ b/public/notebook.css
@@ -210,27 +210,27 @@ div.plot {
   margin-top: -20pt;
 }
 
-#hamburger-menu {
+#menu {
   position: fixed;
   top: 8pt;
   left: 8pt;
   cursor: pointer;
 }
-#hamburger-menu ul {
+#menu ul {
   list-style-type: none;
   font-size: 9pt;
   padding: 0;
 }
-#hamburger-menu li {
+#menu li {
   padding: 2pt 4pt;
 }
-#hamburger-menu img {
+#menu img {
   width: 16pt;
   height: 16pt;
   opacity: 0.5;
 }
 
-.menu-content {
+#menu .menu-content {
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -241,18 +241,18 @@ div.plot {
   transition: all 0.5s;
 }
 
-#hamburger-menu.active .menu-content {
+#menu.active .menu-content {
   visibility: visible;
   opacity: 1;
   transform: translateX(0%);
   transition-delay: 0s;
 }
 
-#hamburger-menu a {
+#menu a {
   color: #333;
   text-decoration: none;
 }
-#hamburger-menu li:hover {
+#menu li:hover {
   background: #ddd;
   color: #000;
   border-radius: 2pt;
