--- a/public/code-on-side.css
+++ b/public/code-on-side.css
@@ -17,12 +17,17 @@ div.editor-container {
   box-sizing: border-box;
   float: left;
   height: 100%;
-  left: 60vw;
-  left: calc(60vw + 2px);
   right: 0;
-  position: absolute;
+  position: fixed;
   width: 40%;
   width: 40vw;
+}
+
+.editor-container-heading {
+  color: #888;
+  font-size: 1.2em;
+  font-weight: 600;
+  text-align: center;
 }
 
 /* hide code */
@@ -34,6 +39,10 @@ div.notebook div.codewrap {
 /* (we're still relying on the amount of space they take up in the layout) :D */
 div.notebook .yields img {
   opacity: 0;
+}
+
+div.ace_editor {
+  border: none;
 }
 
 /* specificity necessary to override injected styles */
